--- a/memoria/Bibliografia.bib
+++ b/memoria/Bibliografia.bib
@@ -1,10 +1,29 @@
-@misc{tello_driver,
-	author = "DJI",
-	title = "{DJI Tello driver python}",
+@misc{tellodriver,
+	author = {DJI},
+	title = {DJI Tello driver python},
 	howpublished = {\url{https://github.com/dji-sdk/Tello-Python}},
 % 	note = "[Accedido 29 de Mayo de 2019]"
 }
 
+@misc{github_tensorflow,
+	title = "{Tensorflow}",
+	howpublished = {\url{https://github.com/tensorflow/tensorflow}},
+% 	note = "[Accedido 22 de Junio de 2019]"
+}
+@misc{kibotics,
+  author = {Asociación de robótica e inteligencia artificial JdeRobot},
+  title = {Kibotics},
+  howpublished = {\url{https://kibotics.org}}
+}
+@misc{mixamo,
+  author = {Adobe Systems Incorporated},
+  title = {Mixamo},
+howpublished = {\url{www.mixamo.com}}
+}
+@misc{labelme,
+  title = {LabelMe},
+  howpublished = {\url{http://labelme.csail.mit.edu/Release3.0/}}
+}
 @misc{fpn,
       title={Feature Pyramid Networks for Object Detection}, 
       author={Tsung-Yi Lin and Piotr Dollár and Ross Girshick and Kaiming He and Bharath Hariharan and Serge Belongie},
