--- a/memoria/capitulos/0-Acronimos.tex
+++ b/memoria/capitulos/0-Acronimos.tex
@@ -3,3 +3,10 @@
 \newacronym{va}{VA}{Visión Artificial}
 \newacronym{fpn}{FPN}{Feature Pyramid Networks}
 \newacronym{ssd}{SSD}{Single Shot MultiBox Detector}
+\newacronym{ia}{IA}{Inteligencia Artificial}
+\newacronym{fps}{FPS}{Frames Per Second}
+\newacronym{nms}{NMS}{Non-Maximum Suppression}
+\newacronym{iou}{IOU}{Intersecion Over Union}
+\newacronym{tfm}{TFM}{Trabajo de Fin de Máster}
+\newacronym{cuda}{CUDA}{Compute Unified Device Architecture}
+\newacronym{opencv}{OpenCV}{Open Source Computer  Vision Library}
